--- a/sikdai-ho-pasa/learn-react-tutorials/gym/src/styles/hero.css
+++ b/sikdai-ho-pasa/learn-react-tutorials/gym/src/styles/hero.css
@@ -1,22 +1,26 @@
+
 .hero-wrapper{
+    height: 70vh;
  display:flex;
  justify-content: space-between;
  padding-top: 50px;
+ 
 }
 
-.hero_content section_title{
- font-size: 3rem;
+.section-title{
+ font-size: 2.5rem;
  padding-right: 60px;
  line-height: 60px;
  margin-bottom:  20px;
+ margin-top: 150px;
 }
 
 .highlights{
     color: var(--primary-color);
 }
 
-.hero_content p {
-    font-size: 1.1rem;
+.hero-content p {
+    font-size: 1.5rem;
     color: var(-headline-color);
     margin-bottom: 50px;
     line-height: 30px;
@@ -27,24 +31,26 @@
     align-items: center;
     column-gap: 3rem;
 }
-.watch-btn{
-    padding: 5px 18px;
-    border: none;
+.hero-btns watch-btn{
+    border-radius: none;
     outline:none;
-    display: flex;
-    align-items: center;
-    column-gap: 0.8rem;
+    padding: 10px 20px;
+    color: #fff;
     color: var(--headline-color);
-    font-size: 1.1rem;
+    border-radius: 5px;
+    font-family: var(--font-name);
+    font-size: 1.2rem;
     font-weight: 500;
     cursor: pointer;
 }
 
+
 .watch-btn span{
     background: #fff;
     border-radius: 50%;
-    color: var(--primary-color);
+    color: black;
     font-size: 1.3rem;
+    margin-right: 10px;
 }
 
 .register-btn{
@@ -84,20 +90,22 @@
 .hero_img_wrapper{
     position: relative;
     z-index: 1;
+    top: 8%;
+    right: 20%;
 }
 .box_img{
     position: absolute;
     top: -12%;
-    left: -13%;
+    left: -30%;
     z-index: 10;
 }
 
 .box_img img{
-    width: 121.5%;
+    width: 125%;
 }
 
 .heart-rate{
-    width: 100px;
+width: 100px;
  position: absolute;
  top: 55%;
  left: -11%;
@@ -164,3 +172,24 @@ padding: 3px;
     .dumble_icon img{
         width: 80%;
     }
+
+    .background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -99;
+        background-color: #e5e5f7;
+        opacity: 0.1;
+        background-image: repeating-radial-gradient(
+            circle at 0 0,
+            transparent 0,
+            #e5e5f7 36px
+          ),
+          repeating-linear-gradient(#444cf755, #444cf7);
+      }
+      
+      /* Rest of your CSS code */
+      
+    
