--- a/sikdai-ho-pasa/learn-react-tutorials/gym/src/styles/pricing.css
+++ b/sikdai-ho-pasa/learn-react-tutorials/gym/src/styles/pricing.css
@@ -1,14 +1,18 @@
+#pricing{
+    height: 100vh;
+}
+
 .pricing-top{
     text-align: center;
 }
 
 .pricing-top h2{
     font-size: 2.5rem;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
 }
 
 .pricing-top p{
-    font-size: 2rem;
+    font-size: 1.4rem;
     color: var(--heading-color);
     line-height: 28px;
     margin-bottom: 50px;
