--- a/sikdai-ho-pasa/learn-react-tutorials/gym/src/styles/start.css
+++ b/sikdai-ho-pasa/learn-react-tutorials/gym/src/styles/start.css
@@ -1,5 +1,5 @@
 .start-wrapper{
-    height: 90vh;
+    height: 100vh;
     display: flex;
     justify-content: space-between;
     column-gap: 1rem;
@@ -7,7 +7,8 @@
 }
 
 .start-img, .start-content{
-    width: 50%;
+
+    width: 60%;
 }
 
 .start-img img{
@@ -15,14 +16,15 @@
 }
 
 .start-content h2{
-    font-size: 2.5rem;
-    margin: 0px;
+    font-size: 4rem;
+    margin-top: -100px;
+    margin-bottom: 20px;
 }
 
 .start-content p{
     color: var(--heading-color);
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     line-height: 28px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
