--- a/sikdai-ho-pasa/learn-react-tutorials/soultravel/src/App.css
+++ b/sikdai-ho-pasa/learn-react-tutorials/soultravel/src/App.css
@@ -19,6 +19,14 @@
     */
 }
 
+.bg-gradient {
+  background-image: linear-gradient(
+    180deg,
+    var(--primary-color),
+    #F4B943
+  );
+}
+
 *{
   padding: 0;
   margin: 15px;
@@ -67,3 +75,6 @@ ul{
 }
 
 
+.highlights{
+  color: var(--primary-color);
+}
