--- a/sikdai-ho-pasa/learn-react-tutorials/fitbody/src/App.css
+++ b/sikdai-ho-pasa/learn-react-tutorials/fitbody/src/App.css
@@ -1,26 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
-:root{
+:root {
   --primary-color: #6f55f2;
   --heading-color: #132742;
-  --bg-gradient: linear-gradient( 90deg, 
-  rgba(103, 101, 240, 1) 27%,
-  rgba(141, 141, 235, 1) 85% )
+  --bg-gradient: linear-gradient(90deg, rgba(103, 101, 240, 1) 27%, rgba(141, 141, 235, 1) 85%);
+  --default-font: 'Oswald', sans-serif; /* Define a variable for the default font */
 }
 
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: var(--default-font); /* Use the variable for the default font */
+}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1, h2, h3{
+  font-weight: 700;
+}
+
+section{
+  padding: 50px 0px;
+}
+
+a{
+  text-decoration: none;
+  color: unset;
+}
+a:hover{
+  color: unset;
+}
+
+ul{
+  list-style: none;
 }
 
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+5:43
