--- a/sikdai-ho-pasa/learn-react-tutorials/fitbody/src/App.css
+++ b/sikdai-ho-pasa/learn-react-tutorials/fitbody/src/App.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
 :root {
   --primary-color: #6f55f2;
   --heading-color: #132742;
   --bg-gradient: linear-gradient(90deg, rgba(103, 101, 240, 1) 27%, rgba(141, 141, 235, 1) 85%);
-  --default-font: 'Oswald', sans-serif; /* Define a variable for the default font */
+  --default-font:  'Montserrat', sans-serif; /* Define a variable for the default font */
 }
 
 
