--- a/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/singleBlog.ejs
+++ b/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/singleBlog.ejs
@@ -83,6 +83,28 @@
         .create-blog-link:hover {
             background-color: #4A00E0;
         }
+
+        .delete-link {
+    display: inline-block;
+    padding: 8px 12px;
+    background-color: #e74c3c;
+    color: white;
+    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+        .edit-link {
+    display: inline-block;
+    padding: 8px 12px;
+    background-color: rgb(60, 231, 160);
+    color: white;
+    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
         footer {
             background-color: #333;
             color: #fff;
@@ -110,11 +132,13 @@
                 <h2 class="blog-title"><%- blog[0].subTitle  %></h2>
                 <p class="blog-content"><%- blog[0].content %></p>
                 <p class="blog-meta">Author: <%= blog[0].author %> | Published on <%- blog[0].createdAt.toISOString().slice(0,10) %></p>
-                
+                <!-- id is inside -->
+                <a href="/delete/<%-blog[0].id %>" class="delete-link">Delete</a>
+                <a href="/edit/<%-blog[0].id %>" class="edit-link">Edit</a>
             </div>
-        
-    </div>
+            
 
+    </div>
 
     <footer>
         <p>&copy; <%= new Date().getFullYear() %> Our Awesome Blog</p>
