api to frontend fixed

--- a/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/blogs.ejs
+++ b/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/blogs.ejs
@@ -98,11 +98,12 @@
     </style>
 </head>
 <body>
+    
     <header>
+        <!-- <% - include('navbar') %> Include the navbar -->
         <h1>Welcome to Our Blog</h1>
         <p>Explore the latest articles and share your thoughts!</p>
     </header>
-
     <div class="main-content">
         
         <% blogs.forEach((blog) => { %>
