--- a/sikdai-ho-pasa/node-js/beginner-pathway/backend/public/css/navbar.css
+++ b/sikdai-ho-pasa/node-js/beginner-pathway/backend/public/css/navbar.css
@@ -8,6 +8,10 @@
     display: flex;
     justify-content: center;
   }
+
+  a{
+    color: white;
+  }
   .menu {
     display: flex;
     justify-content: flex-end;
