login added successfully

--- a/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/components/navbar.ejs
+++ b/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/components/navbar.ejs
@@ -10,7 +10,7 @@
     <div class="menu">
       <input type="text" class="search-bar" placeholder="Search...">
       <button class="btn btn-register"><a href="/register">Register</a></button>
-      <button class="btn btn-login">Login</button>
+      <button class="btn btn-login"><a href="/login">Login</a></button>
       
     </div>
   </div>
