--- a/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/editBlog.ejs
+++ b/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/editBlog.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Edit Blog Form</title>
-  <link rel="stylesheet" href="css/editBlog.css">
+  <link rel="stylesheet" href="/css/editBlog.css">
 </head>
 <body>
   <div class="card">
