--- a/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/register.ejs
+++ b/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/register.ejs
@@ -78,8 +78,13 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required>
       </div>
+      <div class="form-group">
+        <label for="confirmpassword">Confirm Password</label>
+        <input type="confirmpassword" id="confirmpassword" name="confirmpassword" required>
+      </div>
       <button type="submit" class="btn">Register</button>
     </form>
+    
   </div>
 </body>
 </html>
