--- a/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/blogs.ejs
+++ b/sikdai-ho-pasa/node-js/beginner-pathway/backend/views/blogs.ejs
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Modern Blog Landing Page</title>
+    <link rel="icon" href="/assets/image/logo.png" sizes="32x32" type="image/png">
+    <title>Pro Blog</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/blogs.css">
 </head>
