--- a/sikdai-ho-pasa/learn-react-tutorials/fitbody/src/UI/Hero.css
+++ b/sikdai-ho-pasa/learn-react-tutorials/fitbody/src/UI/Hero.css
@@ -7,7 +7,7 @@
   
   /* Section title in Hero content */
   .hero__content .section_title {
-    font-size: 3rem;
+    font-size: 2.5rem;
     padding-right: 60px;
     line-height: 60px;
     margin-bottom: 20px;
@@ -27,54 +27,70 @@
   }
   
   /* Button container */
-  .hero__btns {
+  .hero__btns{
     display: flex;
     align-items: center;
     column-gap: 3rem;
   }
   
   /* Watch button */
-  .watch__btn {
-    border: none;
-    outline: none;
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-    color: var(--heading-color);
-    font-size: 1.1rem;
-    font-weight: 500;
-    cursor: pointer;
-  }
-  
-  .watch__btn span {
-    background: #fff;
-    border-radius: 50%;
-    padding: 0.8rem;
-    display: flex;
-    align-items: center;
-    box-shadow: 3px 3px 8px -1px #d3cef2;
-  }
+  /* Style for watch__btn */
+.watch__btn {
+  background-color: var(--primary-color);
+  color: white;
+  font-size: 1.1rem;
+  font-weight: 600;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.watch__btn span {
+  margin-right: 15px;
+}
+
+/* Style for register__btn */
+.register__btn {
+  background-image: linear-gradient(to right, orange, #ff8c00);
+  color: white;
+  font-size: 1.1rem;
+  font-weight: 600;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+}
   
   /* Boxes */
   .box-01 {
+    position: relative;
+    /* top: 10%; */
+    left: -10%;
     width: 400px;
     height: 400px;
     border-radius: 100%;
-    border: 25px solid black;
+    border: 25px solid var(--primary-color);
+    
   }
   
   .box-02 {
     width: 350px;
     height: 350px;
     border-radius: 100%;
-    border: 25px solid rgb(32, 32, 32);
+    border: 25px solid #ff8c00;
   }
   
   .box-03 {
     width: 300px;
     height: 300px;
     border-radius: 100%;
-    border: 25px solid rgb(75, 75, 75);
+    border: 25px solid var(--primary-color);
   }
   
   /* Hero image wrapper */
@@ -86,21 +102,21 @@
   /* Box image */
   .box__img {
     position: absolute;
-    top: -12%;
-    left: -13%;
+    top: -30%;
+    left: -40%;
     z-index: 10;
   }
   
   .box__img img {
-    width: 123%;
+    width: 120%;
   }
   
   /* Heart rate section */
 .heart__rate {
     width: 180px;
     position: absolute;
-    top: 50%;
-    left: 5%;
+    top: 90%;
+    right: 5%;
     transform: translateY(-50%);
     z-index: 10;
     box-shadow: -3px 3px 8px -1px #d3cef2;
@@ -132,8 +148,8 @@
   /* Gym location section */
   .gym__location {
     position: absolute;
-    top: -2%;
-    left: -17%;
+    top: 25%;
+    left: -35%;
     z-index: 10;
     box-shadow: 3px -3px 8px -1px #d3cef2;
     text-align: center;
