--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/newsfeed/newsfeed.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/newsfeed/newsfeed.ejs
@@ -27,6 +27,7 @@
                     <p class="description"><%- singleNews.content %></p>
                     <p class="author">Author: John Doe</p>
                 </div>
+                <button class="edit-button"><a href="/single/<%- singleNews.id %>">Read More</a></button>
                 <div class="button-group">
                     <button class="edit-button">Edit</button>
                     <button class="delete-button">Delete</button>
