update news added

--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/newsfeed/newsfeed.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/newsfeed/newsfeed.ejs
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    
+    <%- include('../navbar/navbar.ejs') %> <!-- Corrected include syntax -->
     <main>
         <% news.forEach((singleNews) => { %>
             <article class="news-card">
