--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/singleBlog/singleBlog.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/singleBlog/singleBlog.ejs
@@ -22,6 +22,7 @@
     <h4> <%- singleNews[0].subtitle %> </h4>
     <p>  <%- singleNews[0].content %></p>
     <button class="delete-button" ><a href="/delete/<%- singleNews[0].id %>">Delete</a></button>
+    <button class="update-button" ><a href="/editNews/<%- singleNews[0].id %>">Update</a></button>
         Hello
     <footer>
         <p>&copy; 2023 YourNewsFeed</p>
