--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/public/styles/navbar.css
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/public/styles/navbar.css
@@ -1,32 +1,44 @@
-/* main.css */
-body {
-    font-family: Arial, sans-serif;
+/* Reset some default styles */
+* {
     margin: 0;
     padding: 0;
-}
-
-.navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-}
-
-.navbar-nav {
-    list-style: none;
-    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  /* Navbar styling */
+  nav {
     display: flex;
-}
-
-.nav-item {
-    margin-right: 10px;
-}
-
-.nav-item a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.content {
-    margin-top: 20px;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f8f8f8;
     padding: 20px;
-}
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  .logo a {
+    text-decoration: none;
+    color: #333;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  .nav-links {
+    list-style: none;
+    display: flex;
+  }
+  
+  .nav-links li {
+    margin-right: 20px;
+  }
+  
+  .nav-links li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    transition: color 0.3s ease;
+  }
+  
+  .nav-links li a:hover {
+    color: #555;
+  }
+  
