--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/navbar/navbar.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/navbar/navbar.ejs
@@ -13,9 +13,9 @@
   </div>
   <ul class="nav-links">
     <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Services</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="/createNews">Create News</a></li>
+    <li><a href="/register">Register</a></li>
+    <li><a href="/login">Login</a></li>
   </ul>
 </nav>
 
