--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/register/register.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/register/register.ejs
@@ -22,6 +22,10 @@
         <input type="password" id="password" name="password" required>
       </div>
       <div class="form-group">
+        <label for="confirmpassword">Confirm Password</label>
+        <input type="confirmpassword" id="confirmpassword" name="confirmpassword" required>
+      </div>
+      <div class="form-group">
         <button type="submit">Register</button>
       </div>
     </form>
