singleblog ma ni username display vayo

--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/singleBlog/singleBlog.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/singleBlog/singleBlog.ejs
@@ -21,6 +21,7 @@
     <h3> <%- singleNews[0].title %> </h3>
     <h4> <%- singleNews[0].subtitle %> </h4>
     <p>  <%- singleNews[0].content %></p>
+    <p>  <%- singleNews[0].user.username %></p>
     <button class="delete-button" ><a href="/delete/<%- singleNews[0].id %>">Delete</a></button>
     <button class="update-button" ><a href="/editNews/<%- singleNews[0].id %>">Update</a></button>
         Hello
