--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/navbar/navbar.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/navbar/navbar.ejs
@@ -14,6 +14,7 @@
   <ul class="nav-links">
     <li><a href="#">Home</a></li>
     <li><a href="/createNews">Create News</a></li>
+    <li><a href="/myblogs">My blogs</a></li>
     <li><a href="/register">Register</a></li>
     <li><a href="/login">Login</a></li>
   </ul>
