--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/createNews/createNews.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/createNews/createNews.ejs
@@ -13,11 +13,14 @@
 
   <main>
     <div class="card">
-        <form action="/createNews" method="post" id="newsForm">
+      <!-- image pathauna lai multipart chayo -->
+        <form action="/createNews" method="post" id="newsForm" enctype="multipart/form-data"> 
             <label for="title">Title:</label>
             <input type="text" id="title" name="title" required><br><br>
             <label for="subtitle">Subtitle:</label>
             <input type="text" id="subtitle" name="subtitle" required><br><br>
+            <label for="image">Image:</label>
+            <input type="file" id="image" name="image" required><br><br>
             
             <label for="content">Content:</label><br>
             <textarea id="content" name="content" rows="8" cols="50" required></textarea><br><br>
