image edit and unlink path done

--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/myNews/myNews.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/myNews/myNews.ejs
@@ -14,6 +14,7 @@
       <div class="news-details">
         <h2 class="news-title"><%- mine.title %></h2>
         <p class="meta-title"><%- mine.subtitle %></p>
+        <img src="<%- mine.image %>" alt="image" height="200px" width="200px">
         <p class="description"><%- mine.content %></p>
         
         <% if (mine.user) { %>
