--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/newsfeed/newsfeed.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/newsfeed/newsfeed.ejs
@@ -25,6 +25,7 @@
                     <h2 class="news-title"><%- singleNews.title %></h2>
                     <p class="meta-title"><%- singleNews.subtitle %></p>
                     <p class="description"><%- singleNews.content %></p>
+                    <img src="<%- singleNews.image %>" alt="image" height="200px" width="200px">
                     <!-- user hai -->
                     <p class="author">Author: <%- singleNews.user.username %></p>
                     <p class="author">Email: <%- singleNews.user.email %></p>
