--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/editNews/editNews.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/editNews/editNews.ejs
@@ -13,11 +13,13 @@
 
   <main>
     <div class="card">
-        <form action="/editNews/<%- prefill[0].id %>" method="post" id="newsForm">
+        <form action="/editNews/<%- prefill[0].id %>" method="post" id="newsForm" enctype="multipart/form-data">
             <label for="title">Title:</label>
             <input type="text" id="title" value="<%- prefill[0].title %>" name="title" required><br><br>
             <label for="subtitle">Subtitle:</label>
             <input type="text" id="subtitle"value="<%- prefill[0].subtitle %>"  name="subtitle" required><br><br>
+            <label for="image">Image:</label>
+            <input type="file" id="image" name="image" value="<%- prefill[0].image %>"  ><br><br>
             
             <label for="content">Content:</label><br>
             <textarea id="content" name="content" rows="8" cols="50" required>
