--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/singleBlog/singleBlog.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/singleBlog/singleBlog.ejs
@@ -20,6 +20,7 @@
     
     <h3> <%- singleNews[0].title %> </h3>
     <h4> <%- singleNews[0].subtitle %> </h4>
+    <img src="<%- singleNews[0].image %>" alt="image" height="200px" width="200px">
     <p>  <%- singleNews[0].content %></p>
     <p>  <%- singleNews[0].user.username %></p>
     <button class="delete-button" ><a href="/delete/<%- singleNews[0].id %>">Delete</a></button>
