--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/forgotPassword/forgotPassword.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/forgotPassword/forgotPassword.ejs
@@ -7,20 +7,16 @@
 </head>
 <body>
   <div class="login-container">
-    <form action="/login" method="POST" class="login-form">
-      <h2>Forgot Password</h2>
+    <form action="/forgotPassword" method="POST" class="login-form">
+      <h2>Login</h2>
       <div class="form-group">
         <label for="email">Email</label>
         <input type="text" id="email" name="email" required>
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
+        <button type="submit">Send OTP</button>
       </div>
-      <div class="form-group">
-        <button type="submit">Login</button>
-      </div>
-      <a href="/forgotPassword">Forgot Password</a>
+      
     </form>
   </div>
 </body>
