--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/singleBlog/singleBlog.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/singleBlog/singleBlog.ejs
@@ -23,9 +23,13 @@
     <img src="<%- singleNews[0].image %>" alt="image" height="200px" width="200px">
     <p>  <%- singleNews[0].content %></p>
     <p>  <%- singleNews[0].user.username %></p>
-    <button class="delete-button" ><a href="/delete/<%- singleNews[0].id %>">Delete</a></button>
+    <% if(currentUser){ %>
+        <%  if(currentUserId == singleNews[0].user.id){  %>
+            <button class="delete-button" ><a href="/delete/<%- singleNews[0].id %>">Delete</a></button>
     <button class="update-button" ><a href="/editNews/<%- singleNews[0].id %>">Update</a></button>
-        Hello
+       
+    <%   } %>
+    <%  } %>
     <footer>
         <p>&copy; 2023 YourNewsFeed</p>
     </footer>
