--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/passwordChangeForm/passwordChangeForm.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/passwordChangeForm/passwordChangeForm.ejs
@@ -7,21 +7,22 @@
 </head>
 <body>
   <div class="login-container">
-    <form action="/login" method="POST" class="login-form">
+    <div class="container">
       <h2>Change Password</h2>
-      <div class="form-group">
-        <label for="password">New Password</label>
-        <input type="password" id="password" name="password" required>
-      </div>
-      <div class="form-group">
-        <label for="confirmpassword">Confirm Password</label>
-        <input type="confirmpassword" id="confirmpassword" name="confirmpassword" required>
-      </div>
-      <div class="form-group">
-        <button type="submit">Change Password</button>
-      </div>
+      <form action="/passwordChangeForm/<%-email %>/<%-otp%>" method="post">
+          <div class="form-group">
+              <label for="password">New Password:</label>
+              <input type="text" id="password" name="newPassword" required>
+          </div>
      
-    </form>
+          <div class="form-group">
+              <label for="confirmPassword">Confirm Password:</label>
+              <input type="text" id="confirmPassword" name="confirmPassword" required>
+          </div>
+       
+          <button type="submit" class="btn">Change Password</button>
+      </form>
+  </div>
   </div>
 </body>
 </html>
