--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/login/login.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/login/login.ejs
@@ -8,6 +8,7 @@
 <body>
   <div class="login-container">
     <form action="/login" method="POST" class="login-form">
+      <p><%- error %></p>
       <h2>Forgot Password</h2>
       <div class="form-group">
         <label for="email">Email</label>
