--- a/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/newsfeed/newsfeed.ejs
+++ b/sikdai-ho-pasa/Backend/node-js/beginner-pathway/news-api/views/newsfeed/newsfeed.ejs
@@ -18,6 +18,7 @@
 </head>
 <body>
     <%- include('../navbar/navbar.ejs') %> <!-- Corrected include syntax -->
+    <p><%- success%></p>
     <main>
         <% news.forEach((singleNews) => { %>
             <article class="news-card">
@@ -26,15 +27,20 @@
                     <p class="meta-title"><%- singleNews.subtitle %></p>
                     <p class="description"><%- singleNews.content %></p>
                     <img src="<%- singleNews.image %>" alt="image" height="200px" width="200px">
-                    <!-- user hai -->
-                    <p class="author">Author: <%- singleNews.user.username %></p>
-                    <p class="author">Email: <%- singleNews.user.email %></p>
+                    <% if (singleNews.user) { %>
+                        <!-- User information is available -->
+                        <p class="author">Author: <%- singleNews.user.username %></p>
+                        <p class="author">Email: <%- singleNews.user.email %></p>
+                    <% } else { %>
+                        <!-- User information is not available -->
+                        <p class="author">Author: Unknown</p>
+                    <% } %>
                 </div>
                 <button class="edit-button"><a href="/single/<%- singleNews.id %>">Read More</a></button>
-                
             </article>
         <% }) %>
     </main>
+    
     <footer>
         <p>&copy; 2023 YourNewsFeed</p>
     </footer>
