--- a/web-dev-projects/vanila/project-1/style.css
+++ b/web-dev-projects/vanila/project-1/style.css
@@ -69,7 +69,8 @@ html, body {
 
 /* hero section */
 #main>h1{
-    font-size: 125px;
+    font-weight: 400;
+    font-size: 150px;
     text-transform: uppercase;
     position: absolute;
     top: 50%;
@@ -106,9 +107,48 @@ img{
 
 
 /* bottom texts */
-#btn-left{
+#bottom-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#btm-left{
     position: absolute;
     bottom: 5%;
     left: 3%;
     font-size: 20px;
 }
+
+#icon-box{
+    display: flex;
+    align-items: end;
+    justify-content: end; 
+    
+}
+#btm-right{
+    position: absolute;
+    bottom: 5%;
+    right: 3%;
+    font-size: 20px;
+}
+
+#icon{
+    position: absolute;
+    bottom: 10%;
+    right: 3%;
+    font-size: 20px;
+}
+
+
+.circle {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    bottom: -10%;
+    border: 2px solid black; /* Change border width and color as needed */
+    border-radius: 50%; /* Ensures the div is a circle */
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+
